LEDGE-161 replaced primitive boxing types constructor usage with valueOf()